--- a/css/global.less
+++ b/css/global.less
@@ -439,13 +439,16 @@ section.submissao {
     button {
         position: relative;
         padding: 20px;
+        padding-top: 13px;
+        padding-bottom: 13px;
         width: 45%;
         margin: 30px 20px;
         color: #949494;
         text-transform: uppercase;
-        background: #F4F4F4;
+        // background: #F4F4F4;
         border: 12x solid #F4F4F4;
         font-weight: 600;
+        font-size: 18px;
         // color: #fff;
         border-radius: 2px;
         // border: 1px solid #FFF;
@@ -455,11 +458,11 @@ section.submissao {
             margin-bottom: 0;
             width: 80%;
         }
-        // &:hover {
-        //     color: #0F4032;
-        //     background: #11B7D4;
-        //     transition: all .4s;
-        // }
+        &:hover {
+            color: #0F4032;
+            background: #11B7D4;
+            transition: all .4s;
+        }
     }
 }
 
