size buttom inscrição

--- a/css/global.less
+++ b/css/global.less
@@ -441,9 +441,9 @@ section.submissao {
         padding: 20px;
         padding-top: 13px;
         padding-bottom: 13px;
-        width: 45%;
+        width: 25%;
         margin: 30px 20px;
-        color: #949494;
+        // color: #949494;
         text-transform: uppercase;
         // background: #F4F4F4;
         border: 12x solid #F4F4F4;
